--- a/ussak.kyriakoskatzourakis.gr/assets/css/my.css
+++ b/ussak.kyriakoskatzourakis.gr/assets/css/my.css
@@ -35,7 +35,7 @@ a {
 
 #main > section.one {
     background-color: #81918E;
-    background-image: url("../../images/ussak-banner.jpg");
+    background-image: url("../../images/ussak-flower-banner.jpg");
 }
 
 #main > section p {
@@ -58,8 +58,8 @@ a {
 	position:absolute;
 	top: 0;
 	left:0;
-	width:100%;
-	height:100%;    
+	width:80%;
+	height:80%;    
 }
 
 .donate-container {
