--- a/ussak.kyriakoskatzourakis.gr/assets/css/my.css
+++ b/ussak.kyriakoskatzourakis.gr/assets/css/my.css
@@ -24,19 +24,110 @@ a {
     border-bottom: none;
 }   
 
+a:hover {
+    color: #430000;    
+}
+
 #header {
     background: #111;
 } 
+
+#header {
+    background-color:#430000;
+    background-color: #353631;
+    background-color: #303049;
+}
+
+#header .icons a {
+    color: rgba(255, 255, 255, 10.5);
+}
+
+/* language selector */
+
+#lang {
+     /*background-color:rgba(68, 68, 68, 0.35);*/
+    /*margin-right: 1.5em;*/
+    text-align: center;    
+}
+
+#lang ul {
+    margin-bottom: 1.75em;
+}
+
+#lang li {
+    display: inline-block;
+}
+
+#lang ul li a.active {
+    background: rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
+    color: #fff;
+}
+
+#lang ul li a {
+    display: block;
+    padding: 0.25em 1.5em 0.25em 1.5em;
+    color: rgba(255, 255, 255, 0.5);
+    text-decoration: none;
+    outline: 0;
+    border: 0;
+    -moz-transition: none;
+    -webkit-transition: none;
+    -ms-transition: none;
+    transition: none;
+    
+    font-size: 0.6em;
+}
+
+/* navigation */
+
+#nav ul li a span:before {
+    color: rgba(255, 255, 255, 0.5);
+}
+
+#nav ul li a.active span:before {
+    color: #fff;
+}
+
+/* cover image */
+
 #main > section.cover {
-    padding: 11.2em 0;
+    padding: 14.2em 0;
     background-size: cover;
     background-position: center center;
+}
+    
+
+@media screen and (max-width: 736px) {
+    #main > section.cover {
+        padding: 13em 0;
+        background-size: cover;
+        background-position: center center;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    #main > section.cover {
+        padding: 12em 0;
+        background-size: cover;
+        background-position: center center;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    #main > section.cover {
+        padding: 11em 0;
+        background-size: cover;
+        background-position: center center;
+    }
 }
 
 #main > section.one {
     background-color: #81918E;
     background-image: url("../../images/ussak-flower-banner.jpg");
 }
+
+
 
 #main > section p {
     text-align: left;
@@ -58,11 +149,12 @@ a {
 	position:absolute;
 	top: 0;
 	left:0;
-	width:80%;
-	height:80%;    
+	width:100%;
+	height:100%;    
 }
 
 .donate-container {
+    background-color: aliceblue;
     font-family: Courier New, Courier, monospace;
 }
 
