--- a/ussak.kyriakoskatzourakis.gr/assets/css/my.css
+++ b/ussak.kyriakoskatzourakis.gr/assets/css/my.css
@@ -44,9 +44,7 @@ a:hover {
 
 /* language selector */
 
-#lang {
-     /*background-color:rgba(68, 68, 68, 0.35);*/
-    /*margin-right: 1.5em;*/
+/*#lang {    
     text-align: center;    
 }
 
@@ -77,7 +75,7 @@ a:hover {
     transition: none;
     
     font-size: 0.6em;
-}
+}*/
 
 /* navigation */
 
@@ -87,6 +85,43 @@ a:hover {
 
 #nav ul li a.active span:before {
     color: #fff;
+}
+
+
+/* main top nav bar */
+
+#top-bar  {
+    background-color: #303049;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 0.6em;
+    line-height: 2em;
+   }
+
+ul.top-nav {
+    margin: 0;
+    text-align: right;
+}
+
+ul.top-nav li {
+    display: inline-block;
+}
+
+ul.top-nav li a {
+    color: rgba(255, 255, 255, 0.5);  
+    text-decoration: none;
+    padding: 1em;    
+}
+
+ul.top-nav li a.active {
+     background: rgba(0, 0, 0, 0.15);
+    box-shadow: inset 0 0 0.25em 0 rgba(0, 0, 0, 0.125);
+    color: #fff;
+}
+
+/* project nutshell */
+
+.i-project-nutshell {
+    margin-right: 1.75em;
 }
 
 /* cover image */
